<resources>
    <!--strings related to names of views -->
    <string name="app_name">QTap</string>
    <string name="calendar_fragment">Schedule</string>
    <string name="information_fragment">Information</string>
    <string name="student_tools_fragment">Student Tools</string>
    <string name="its_fragment">ITS</string>
    <string name="engsoc_fragment">Eng Soc</string>
    <string name="about_fragment">About</string>
    <string name="agenda_fragment">Agenda</string>
    <string name="day_fragment">Day View</string>

    <!--sections for introduction screen -->
    <string name="slide_1_title">Welcome to QTap!</string>
    <string name="slide_1_desc">The one app for all of your Queen\'s needs</string>
    <string name="slide_2_title">Class Schedule</string>
    <string name="slide_2_desc">See when your classes are</string>
    <string name="slide_3_title">Campus Info</string>
    <string name="slide_3_desc">Easily check building hours, ATM locations and more</string>
    <string name="slide_4_title">Queens Food</string>
    <string name="slide_4_desc">Easily pay with QTap at any roomNum on campus</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <!-- Page names -->
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <!--strings for button names -->
    <string name="title_emergency_contacts">Emergency Contacts</string>
    <string name="title_first_year_contacts">First Year Contacts</string>
    <string name="counselling_services">Counselling Services</string>
    <string name="career_services">Career Services</string>
    <string name="solus">SOLUS</string>
    <string name="outlook365">Outlook 365</string>
    <string name="onq">OnQ</string>
    <string name="netid">Net ID:</string>
    <string name="login_date">Login Date:</string>
    <string name="logout">Log Out</string>
    <string name="faculty">Faculty</string>
    <string name="about">About</string>

    <!--strings for titles on top of pages -->
    <string name="resources">Resources</string>
    <string name="links">Links (Open in Internet)</string>
    <string name="account">Account</string>
    <string name="options">Options</string>

    <!-- other strings -->
    <string name="ellipses">&#8226;</string>
    <string name="init_database">Initializing Database</string>
    <string name="no_events">No events today</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tester">tester</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transistion_event_info" />
</resources>
